<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Toptask</string>
    <string name="about">Toptask is a prioritized todo list</string>
    <string name="author">Daniel Ross</string>
    <string name="hello">Hello</string>
    <string name="add_user">New User</string>
    <string name="get_users">View All Users</string>
    <string name="email">Login (email)</string>
    <string name="password">Password</string>    
    <string name="no_tasks">No tasks scheduled :(</string>
    <string name="task_insert">Add</string>
    <string name="task_refresh">Refresh</string>
    <string name="task_delete">Delete</string>
    <string name="task_edit">Edit</string>
    <string name="title">Name</string>
    <string name="body">Description</string>
    <string name="confirm">Confirm</string>
    <string name="category_prompt">Category</string>    
    <string name="start">Start</string>    
    <string name="end">End</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string-array name="priorities">
        <item>-</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="categories">
        <item>Home</item>
        <item>Family</item>
        <item>Work</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>
    <string-array name="filtercategories">
        <item>All</item>
        <item>Home</item>
        <item>Family</item>
        <item>Work</item>
        <item>Leisure</item>
        <item>Other</item>
    </string-array>

</resources>
