<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/insertbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/add_icon"
            android:padding="10dp"        
            android:text="@string/task_insert" 
            />
        <Spinner 
            android:id="@+id/main_spinner"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:prompt="@string/category_prompt"
            android:layout_weight="1"
            />
    </LinearLayout>
    <ListView
        android:id="@+id/tasklist"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
    
    <TextView android:id="@android:id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_tasks"/>
</LinearLayout>

